--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@marceloterreiro/flash-calendar": "^1.3.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "^1.7.6",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "expo": "53.0.9",
     "expo-blur": "~14.1.4",
@@ -44,6 +46,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2",
+    "react-native-toast-message": "^2.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5"
   },
