feat(all): Eliminados todos los mockup y remplazados con llamadas a los endpoint actualizados del backend

--- a/app.json
+++ b/app.json
@@ -17,7 +17,15 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.vedoxdev.axon"
+      "package": "com.vedoxdev.axon",
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS",
+        "android.permission.WAKE_LOCK",
+        "android.permission.INTERNET",
+        "android.permission.ACCESS_NETWORK_STATE"
+      ]
     },
     "web": {
       "bundler": "metro",
